[ JS ] Header men icon switch

--- a/pricing.html
+++ b/pricing.html
@@ -65,7 +65,7 @@
                             <li class="mark-disc">速度最快</li>
                         </ul>
                     </div>
-                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer  flex-wrap d-flex justify-content-between gap-3 border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
@@ -77,7 +77,7 @@
                             <li class="mark-disc">中級</li>
                         </ul>
                     </div>
-                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer  flex-wrap d-flex justify-content-between gap-3 border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
@@ -89,7 +89,7 @@
                             <li class="mark-disc">高級</li>
                         </ul>
                     </div>
-                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer  flex-wrap d-flex justify-content-between gap-3 border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
@@ -102,7 +102,7 @@
                             <li class="mark-disc">資料最完善</li>
                         </ul>
                     </div>
-                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer  flex-wrap d-flex justify-content-between gap-3 border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
@@ -312,7 +312,7 @@
                     </li>
                 </ul>
                 <!-- 分頁表 -->
-                <ul class="pagination d-flex justify-content-end align-items-center gap-1">
+                <ul class="pagination flex-wrap d-flex justify-content-end align-items-center gap-1">
                     <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link text-primary" href="#">2</a></li>
                     <li class="page-item"><a class="page-link text-primary" href="#">3</a></li>
