--- a/home.html
+++ b/home.html
@@ -336,7 +336,7 @@
                     </li>
                 </ul>
                 <!-- 分頁表 -->
-                <ul class="pagination d-flex justify-content-end align-items-center gap-1">
+                <ul class="pagination flex-wrap d-flex justify-content-end align-items-center gap-1">
                     <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link text-primary" href="#">2</a></li>
                     <li class="page-item"><a class="page-link text-primary" href="#">3</a></li>
