Add grid to tool-list

--- a/pricing.html
+++ b/pricing.html
@@ -195,121 +195,122 @@
                     </ul>
                   </div>
                 </div>
-                <ul class="tool-list d-flex flex-wrap justify-content-center my-6 gap-3 lh-base">
-                    <li class="card overflow-hidden tool-item">
-                      <div class="img-container">
-                        <img class="zoom" src="./img/tool1.png" alt="Chatbot Builder">
+                <!-- 工具列表 -->
+                <ul class="tool-list row d-flex justify-content-center my-6 gap-3 lh-base">
+                  <li class="card col-12 col-md-6 col-lg-4 overflow-hidden tool-item">
+                    <div class="img-container">
+                      <img class="zoom" src="./img/tool1.png" alt="Chatbot Builder">
+                    </div>
+                    <div class="content-container">
+                      <div class="ai-desc">
+                        <h3 class="fw-bolder fs-5">Chatbot Builder</h3>
+                        <p class="caption lh-150">建立智能化的聊天機器人，解答常見問題、提供客戶支援、收集反饋等。</p>
                       </div>
-                      <div class="content-container">
-                        <div class="ai-desc">
-                          <h3 class="fw-bolder fs-5">Chatbot Builder</h3>
-                          <p class="caption lh-150">建立智能化的聊天機器人，解答常見問題、提供客戶支援、收集反饋等。</p>
-                        </div>
-                        <div class="ai-info">
-                          <span class="fw-700">AI 模型</span>
-                          <span>卡卡</span>
-                        </div>
-                        <div class="ai-hashtag">
-                          <span>#聊天</span>
-                          <a href="#" class="material-icons">share</a>
-                        </div>
+                      <div class="ai-info">
+                        <span class="fw-700">AI 模型</span>
+                        <span>卡卡</span>
                       </div>
-                    </li>
-                    <li class="card overflow-hidden tool-item">
-                      <div class="img-container">
-                        <img class="zoom" src="./img/tool2.png" alt="Image Recognition Platform">
+                      <div class="ai-hashtag">
+                        <span>#聊天</span>
+                        <a href="#" class="material-icons">share</a>
                       </div>
-                      <div class="content-container">
-                        <div class="ai-desc">
-                          <h3 class="fw-bolder fs-5">Image Recognition Platform</h3>
-                          <p class="caption lh-150">專業的圖像識別平台，識別圖像、分類、標記等。</p>
-                        </div>
-                        <div class="ai-info">
-                          <span class="fw-700">AI 模型</span>
-                          <span>杰杰</span>
-                        </div>
-                        <div class="ai-hashtag">
-                          <span>#影像辨識</span>
-                          <a href="#" class="material-icons">share</a>
-                        </div>
+                    </div>
+                  </li>
+                  <li class="card col-12 col-md-6 col-lg-4 overflow-hidden tool-item">
+                    <div class="img-container">
+                      <img class="zoom" src="./img/tool2.png" alt="Image Recognition Platform">
+                    </div>
+                    <div class="content-container">
+                      <div class="ai-desc">
+                        <h3 class="fw-bolder fs-5">Image Recognition Platform</h3>
+                        <p class="caption lh-150">專業的圖像識別平台，識別圖像、分類、標記等。</p>
                       </div>
-                    </li>
-                    <li class="card overflow-hidden tool-item">
-                      <div class="img-container">
-                        <img class="zoom" src="./img/tool3.png" alt="Language Translation API">
+                      <div class="ai-info">
+                        <span class="fw-700">AI 模型</span>
+                        <span>杰杰</span>
                       </div>
-                      <div class="content-container">
-                        <div class="ai-desc">
-                          <h3 class="fw-bolder fs-5">Language Translation API</h3>
-                          <p class="caption lh-150">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
-                        </div>
-                        <div class="ai-info">
-                          <span class="fw-700">AI 模型</span>
-                          <span>琪琪</span>
-                        </div>
-                        <div class="ai-hashtag">
-                          <span>#翻譯</span>
-                          <a href="#" class="material-icons">share</a>
-                        </div>
+                      <div class="ai-hashtag">
+                        <span>#影像辨識</span>
+                        <a href="#" class="material-icons">share</a>
                       </div>
-                    </li>
-                    <li class="card overflow-hidden tool-item">
-                      <div class="img-container">
-                        <img class="zoom" src="./img/tool4.png" alt="Sentiment Analysis API">
+                    </div>
+                  </li>
+                  <li class="card col-12 col-md-6 col-lg-4 overflow-hidden tool-item">
+                    <div class="img-container">
+                      <img class="zoom" src="./img/tool3.png" alt="Language Translation API">
+                    </div>
+                    <div class="content-container">
+                      <div class="ai-desc">
+                        <h3 class="fw-bolder fs-5">Language Translation API</h3>
+                        <p class="caption lh-150">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
                       </div>
-                      <div class="content-container">
-                        <div class="ai-desc">
-                          <h3 class="fw-bolder fs-5">Sentiment Analysis API</h3>
-                          <p class="caption lh-150">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
-                        </div>
-                        <div class="ai-info">
-                          <span class="fw-700">AI 模型</span>
-                          <span>昊昊</span>
-                        </div>
-                        <div class="ai-hashtag">
-                          <span>#行銷</span>
-                          <a href="#" class="material-icons">share</a>
-                        </div>
+                      <div class="ai-info">
+                        <span class="fw-700">AI 模型</span>
+                        <span>琪琪</span>
                       </div>
-                    </li>
-                    <li class="card overflow-hidden tool-item">
-                      <div class="img-container">
-                        <img class="zoom" src="./img/tool5.png" alt="Fraud Detection Platform">
+                      <div class="ai-hashtag">
+                        <span>#翻譯</span>
+                        <a href="#" class="material-icons">share</a>
                       </div>
-                      <div class="content-container">
-                        <div class="ai-desc">
-                          <h3 class="fw-bolder fs-5">Fraud Detection Platform</h3>
-                          <p class="caption lh-150">預防詐騙活動，適用於銀行、金融、電商等。</p>
-                        </div>
-                        <div class="ai-info">
-                          <span class="fw-700">AI 模型</span>
-                          <span>卡卡</span>
-                        </div>
-                        <div class="ai-hashtag">
-                          <span>#客服</span>
-                          <a href="#" class="material-icons">share</a>
-                        </div>
+                    </div>
+                  </li>
+                  <li class="card col-12 col-md-6 col-lg-4 overflow-hidden tool-item">
+                    <div class="img-container">
+                      <img class="zoom" src="./img/tool4.png" alt="Sentiment Analysis API">
+                    </div>
+                    <div class="content-container">
+                      <div class="ai-desc">
+                        <h3 class="fw-bolder fs-5">Sentiment Analysis API</h3>
+                        <p class="caption lh-150">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
                       </div>
-                    </li>
-                    <li class="card overflow-hidden tool-item">
-                      <div class="img-container">
-                        <img class="zoom" src="./img/tool6.png" alt="Voice Assistant SDK">
+                      <div class="ai-info">
+                        <span class="fw-700">AI 模型</span>
+                        <span>昊昊</span>
                       </div>
-                      <div class="content-container">
-                        <div class="ai-desc">
-                          <h3 class="fw-bolder fs-5">Voice Assistant SDK</h3>
-                          <p class="caption lh-150">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
-                        </div>
-                        <div class="ai-info">
-                          <span class="fw-700">AI 模型</span>
-                          <span>杰杰</span>
-                        </div>
-                        <div class="ai-hashtag">
-                          <span>#生產力</span>
-                          <a href="#" class="material-icons">share</a>
-                        </div>
+                      <div class="ai-hashtag">
+                        <span>#行銷</span>
+                        <a href="#" class="material-icons">share</a>
                       </div>
-                    </li>
+                    </div>
+                  </li>
+                  <li class="card col-12 col-md-6 col-lg-4 overflow-hidden tool-item">
+                    <div class="img-container">
+                      <img class="zoom" src="./img/tool5.png" alt="Fraud Detection Platform">
+                    </div>
+                    <div class="content-container">
+                      <div class="ai-desc">
+                        <h3 class="fw-bolder fs-5">Fraud Detection Platform</h3>
+                        <p class="caption lh-150">預防詐騙活動，適用於銀行、金融、電商等。</p>
+                      </div>
+                      <div class="ai-info">
+                        <span class="fw-700">AI 模型</span>
+                        <span>卡卡</span>
+                      </div>
+                      <div class="ai-hashtag">
+                        <span>#客服</span>
+                        <a href="#" class="material-icons">share</a>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="card col-12 col-md-6 col-lg-4 overflow-hidden tool-item">
+                    <div class="img-container">
+                      <img class="zoom" src="./img/tool6.png" alt="Voice Assistant SDK">
+                    </div>
+                    <div class="content-container">
+                      <div class="ai-desc">
+                        <h3 class="fw-bolder fs-5">Voice Assistant SDK</h3>
+                        <p class="caption lh-150">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
+                      </div>
+                      <div class="ai-info">
+                        <span class="fw-700">AI 模型</span>
+                        <span>杰杰</span>
+                      </div>
+                      <div class="ai-hashtag">
+                        <span>#生產力</span>
+                        <a href="#" class="material-icons">share</a>
+                      </div>
+                    </div>
+                  </li>
                 </ul>
                 <!-- 分頁表 -->
                 <ul class="pagination flex-wrap d-flex justify-content-end align-items-center gap-1">
