Add back to top button

--- a/home.html
+++ b/home.html
@@ -378,13 +378,10 @@
                     <li><a class="link-secondary" href="#">Instagram</a></li>
                 </ul>
             </div>
-            <!-- align-self-start 避免social的mt把a連結高度一起拉高 -->
-            <a class="align-self-start" href="#">
-                Back to Top
-                <!-- <span class="ms-2 align-middle material-icons">arrow_upward</span> -->
-                <!-- 箭頭變小fs-6，把span改sub讓他在副標題的位置 -->
-                <sub class="fs-6 ms-2 material-icons">arrow_upward</sub>
-            </a>
+            <button id="scrollToTop" class="btn align-self-start">
+              Back to Top
+              <sub class="fs-6 ms-2 material-icons">arrow_upward</sub>
+            </button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
@@ -393,8 +390,3 @@
     <script src="all.js"></script>
 </body>
 </html>
-
-<!-- TODO
-1. 分頁換行
-2. 合作夥伴偽元素寬度
--->
