--- a/pricing.html
+++ b/pricing.html
@@ -411,7 +411,7 @@
             </div>
         </div>
         <div class="footer d-flex justify-content-between fw-bold pt-5 pb-3">
-            <div class="d-flex justify-content-between flex-column flex-md-row">
+            <div class="d-flex justify-content-between  align-items-center flex-column flex-md-row">
                 <p>AI工具王 ©2023</p>
                 <ul class="social d-flex flex-wrap gap-3 ms-md-5">
                     <li><a class="link-secondary" href="#">Facebook</a></li>
@@ -419,13 +419,10 @@
                     <li><a class="link-secondary" href="#">Instagram</a></li>
                 </ul>
             </div>
-            <!-- align-self-start 避免social的mt把a連結高度一起拉高 -->
-            <a class="align-self-start" href="#">
-                Back to Top
-                <!-- <span class="ms-2 align-middle material-icons">arrow_upward</span> -->
-                <!-- 箭頭變小fs-6，把span改sub讓他在副標題的位置 -->
-                <sub class="fs-6 ms-2 material-icons">arrow_upward</sub>
-            </a>
+            <button id="scrollToTop" class="btn align-self-start">
+              Back to Top
+              <sub class="fs-6 ms-2 material-icons">arrow_upward</sub>
+            </button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
