--- a/home.html
+++ b/home.html
@@ -190,22 +190,22 @@
                       <a class="nav-link filter-type-active" aria-current="" href="#">全部</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">問答服務</a>
+                      <a class="nav-link" href="#">問答服務</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">虛擬客服</a>
+                      <a class="nav-link" href="#">虛擬客服</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">生活應用</a>
+                      <a class="nav-link" href="#">生活應用</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">程式知識</a>
+                      <a class="nav-link" href="#">程式知識</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">翻譯助手</a>
+                      <a class="nav-link" href="#">翻譯助手</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">行銷文案</a>
+                      <a class="nav-link" href="#">行銷文案</a>
                     </li>
                   </ul>
                   <div class="dropdown">
