Fix service-list spacing

--- a/home.html
+++ b/home.html
@@ -59,23 +59,23 @@
                 包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。
               </p>
             </div>
-            <ul class="service-list d-flex flex-wrap justify-content-center gap-4">
-                <li class="card service-item">
-                    <span class="material-icons">flash_on</span>
-                    <h4 class="fw-bolder fs-2">快速</h4>
-                    <p class="lh-sm">我們先進的推理基礎設施提供了極短的響應時間，讓你的產品服務不間斷。</p>
-                </li>
-                <li class="card service-item">
-                    <span class="material-icons">auto_awesome</span>
-                    <h4 class="fw-bolder fs-2">靈活</h4>
-                    <p class="lh-sm">我們的服務可以根據您的需求進行靈活調整，同時還可以滿足不同項目和預算的需求。</p>
-                </li>
-                <li class="card service-item">
-                    <span class="material-icons">library_add</span>
-                    <h4 class="fw-bolder fs-2">擴充</h4>
-                    <p class="lh-sm">我們的服務支持多種擴充選項，可以滿足您的不斷增長的 AI 需求。</p>
-                </li>
-              </ul>
+            <ul class="service-list row d-flex justify-content-center gap-3">
+              <li class="card col-md-4 service-item">
+                  <span class="material-icons">flash_on</span>
+                  <h4 class="fw-bolder fs-2">快速</h4>
+                  <p class="lh-sm">我們先進的推理基礎設施提供了極短的響應時間，讓你的產品服務不間斷。</p>
+              </li>
+              <li class="card col-md-4 service-item">
+                  <span class="material-icons">auto_awesome</span>
+                  <h4 class="fw-bolder fs-2">靈活</h4>
+                  <p class="lh-sm">我們的服務可以根據您的需求進行靈活調整，同時還可以滿足不同項目和預算的需求。</p>
+              </li>
+              <li class="card col-md-4 service-item">
+                  <span class="material-icons">library_add</span>
+                  <h4 class="fw-bolder fs-2">擴充</h4>
+                  <p class="lh-sm">我們的服務支持多種擴充選項，可以滿足您的不斷增長的 AI 需求。</p>
+              </li>
+          </ul>
         </div>
         <div class="enterprise mt-8">
             <h3 class="fs-2 fw-bold mb-4 mb-md-7">來自合作夥伴</h3>
