--- a/pricing.html
+++ b/pricing.html
@@ -412,7 +412,7 @@
             </div>
         </div>
         <div class="footer d-flex justify-content-between fw-bold pt-5 pb-3">
-            <div class="d-flex justify-content-between  align-items-center flex-column flex-md-row">
+            <div class="d-flex justify-content-between flex-column flex-md-row">
                 <p>AI工具王 ©2023</p>
                 <ul class="social d-flex flex-wrap gap-3 ms-md-5">
                     <li><a class="link-secondary" href="#">Facebook</a></li>
